fixed z-index

--- a/hack_console/static/assets/css/main.css
+++ b/hack_console/static/assets/css/main.css
@@ -546,7 +546,6 @@ zero-md::before {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 9999;
   transform: translateY(-100%);
   transition: transform 0.3s ease;
 }
